--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "daisyui": "^3.9.3",
     "loader-utils": "^3.2.1",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-script": "^2.0.5",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "redux": "^4.2.1",
+    "web-vitals": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
