--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.1",
     "daisyui": "^3.9.3",
     "loader-utils": "^3.2.1",
@@ -18,7 +21,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
     "react-script": "^2.0.5",
+    "react-scripts": "^3.0.1",
     "react-table": "^7.8.0",
     "redux": "^4.2.1",
     "web-vitals": "^3.5.0"
